Closed Bug 603586 Opened 15 years ago Closed 15 years ago

input.list shouldn't return the element associated with the id if it's not a datalist element

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7

People

(Reporter: mounir, Assigned: mounir)

References

Details

(Keywords: dev-doc-complete)

Attachments

(1 file, 1 obsolete file)

Attached patch Patch v1 (obsolete) — Splinter Review
Fix attached. Tests are in bug 595070.
Attachment #482506 - Flags: review?(jonas)
Assignee: nobody → mounir.lamouri
Status: NEW → ASSIGNED
Attachment #482506 - Flags: approval2.0?
Blocks: 556007
Blocks: 595070
Comment on attachment 482506 [details] [diff] [review] Patch v1 Why not use the version of IsHTML() that takes an nsIAtom, like so: if (elem && elem->IsHTML(nsGkAtoms::datalist)) { ?
Attached patch Patch v1.1Splinter Review
Because I completely forgot about it... Could you review it? :)
Attachment #482506 - Attachment is obsolete: true
Attachment #482526 - Flags: review?(bzbarsky)
Attachment #482526 - Flags: approval2.0?
Attachment #482506 - Flags: review?(jonas)
Attachment #482506 - Flags: approval2.0?
Comment on attachment 482526 [details] [diff] [review] Patch v1.1 Sure thing.
Attachment #482526 - Flags: review?(bzbarsky)
Attachment #482526 - Flags: review+
Attachment #482526 - Flags: approval2.0?
Attachment #482526 - Flags: approval2.0+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: