Bug 603586 - input.list shouldn't return the element associated with the id if it's not a datalist element. r+a=bz